# ChangeLog for media-sound/castget
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  31 Mar 2011; Justin Lecher <jlec@gentoo.org> -castget-1.0.1.ebuild,
  castget-1.0.1-r1.ebuild:
  Fixed up ebuild, Cleaned old
