@@ -1,4 +1,15 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST castget-1.0.1.tar.gz 355696 SHA256 44a201d3bf6f95a580d2a3c446f3595f3b5d1a92770206d311cae8ab05e680ea
-EBUILD castget-1.0.1-r1.ebuild 467 SHA256 c925d4fbc5b2440ec946f144f8a3c70bfacac3cf27ad46c434eb17342da63c06 SHA512 66b6428b6c22949cd50f8118209b971c38edc513cfd81453d0b758ff4c3311592831c0ede419d4d97b6436895a04ed4303d034437f390c8deed3880f501d81fb WHIRLPOOL e8dde2aaf014857b24b7d808f27344e44237e9c3f69d2760a11967c20f1d3f4dbb86cc53ac005b362b9ed8889a2825f67d584894ac8ccff88c218856f527d15d
-MISC ChangeLog 249 SHA256 65fa1da1ac7476322cdb096af0b527035da7cdb9a3e2dde54ca5277914435581 SHA512 60261eb332f14af24241592072fa990e5d86327491da2f2649eaca61c74283e33d94387200cdd1dcead334a007032a568dd185e0de3a19596e2febcf19803536 WHIRLPOOL dd6d72f0db4e6ec1e884cd22978dddd90348293204840e32ab701cfae5bf8b3fa7723e4a8e8de510e8e82b2f61e3024b724d06ca51ff49c21aa4ec493c1eb77b
-MISC metadata.xml 338 SHA256 e07be588554ad03a354bf9e733626f339c8cbed944dc0704f96e2116cf6e5b84 SHA512 44e06e4ccd854566eccb9245521325d57d87bcec86e145b2a09c6ebe8f3460ba6c850e44fe5a383468b627ee37bcb2240cd2ed38f056b44cc85cf9b8aa07e009 WHIRLPOOL 288fc586616302f2de24058ca341d1cb43e310ed99cd908657d82b281a72625e1d2a3b1f0a243ef94b0b29bdc846371e6746959f6ffd6e71487354a4cda1004a
+EBUILD castget-1.0.1-r1.ebuild 464 SHA256 fca292ade20dead6375d5ce7a2994843a917c8a6f525d4ab9788696e5d6c69e7 SHA512 74731444bed87332756fe514ba31eb6d8b73e608f2f218b471266e9c1fb33db041a39b4becc64163de8cdbd6d1c993bb5631fc07109bd63f5af9affe45adc184 WHIRLPOOL 8ac950c209413ce9d9a3e1cc9b42841cd082f95b5db5435e9dbd92bdd00c83c4e6c36962d6b711e31c96d5c59d83581ea399aaeef90ad9fb67b7a8c4f541dd47
+MISC ChangeLog 368 SHA256 21f87c233e63e4a0ca7b23b6cb35b84015aa8b37262245f98e360f9da069ad83 SHA512 3e1b58012eb7368550c3d6d5ba4c11fcf5defb45f0030f33519eced5d0610551ff593cb9a63acb18a48ad9fa511d93a474429408bc21ff62abfa393b13b7c5a8 WHIRLPOOL aec4b4c51e40d4956142720a1c80b033eaea0a7ba4dae9e68ae72b6a40ad29c20f27c01fb1666a16d07be0f9b8656c5c9526945a1ec2b2db8215648ab9ac181d
+MISC metadata.xml 337 SHA256 f2ae19508e9b020fb3c579ad2a1aa7a50148f54c9aff919e8fe0e62d527a8134 SHA512 b2a3ca56d4e952b0a067bc4c28877dc3c46b4d574a0e6bd4cd713a9134597aa1a9d6a851076b670c1ec22576502e92d57fe3758968f665e4a384b370b74fab4d WHIRLPOOL 90fc42ea2f4ee7537f24b2795850ce9e915a958d5e63e08a678401a501c445f660cca141fe5b21d545f0c51100ef6f216ccafe84df1e121bb3ed7e59cf580a6b
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+Comment: GPGTools - http://gpgtools.org
+
+iEYEAREIAAYFAlApZCkACgkQgAnW8HDreRaIYgCeL6VtS5vRBWt/Jb6NWmPStKHk
+lEkAnj94kPuKmEMLTgrtePd8ZAY7mKFI
+=sbsE
+-----END PGP SIGNATURE-----
