@@ -1,6 +1,10 @@
 # ChangeLog for media-sound/castget
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  13 Aug 2012; Justin Lecher <jlec@gentoo.org> castget-1.0.1-r1.ebuild,
+  metadata.xml:
+  Moved to virtual/pkg-config
 
   31 Mar 2011; Justin Lecher <jlec@gentoo.org> -castget-1.0.1.ebuild,
   castget-1.0.1-r1.ebuild:
